--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,27 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, "Trebuchet MS", sans-serif;
+}
+
+main {
+  @apply h-screen bg-slate-100 flex flex-col items-center justify-center;
+}
+
+.custom-link {
+  @apply block font-semibold py-2 text-center bg-blue-400 text-white rounded hover:bg-teal-600;
+}
+
+button {
+  background-color: rgb(96, 165, 250);
+  border-radius: 10px;
+  font-family: Arial, "Trebuchet MS", sans-serif;
+  font-size: x-large;
+  color: #fbecec;
+}
+
+button:hover {
+  background-color: rgb(13, 148, 136);
 }
 
 @layer utilities {
