add homepage redirect button

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@ button {
   border-radius: 10px;
   font-family: Arial, "Trebuchet MS", sans-serif;
   font-size: x-large;
-  color: #fbecec;
+  color: white;
 }
 
 button:hover {
